# madgwick-orientation-filter

./: .gitignore  CMakeLists.txt  LICENSE  Madgwick.cpp  Madgwick.h  README.md
tests/: MadgwickTests.cpp
